# LightCalculator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/: triangle.h  vec3.h
include/glfw/: glfw_application.h  glfw_hdr_application.h
include/math/: includes.h  light.h  mat4.h  spherical.h  triangle.h  uber_camera.h  vec3.h
include/opengl/: includes.h  program.h  shader.h  texture.h  vao.h  vbo.h
resources/shaders/light/: light.frag  light.vert
resources/shaders/mesh/: mesh.frag  mesh.vert
src/: main.cpp
src/glfw/: glfw_application.cpp  glfw_hdr_application.cpp
src/math/: uber_camera.cpp
src/opengl/: program.cpp  shader.cpp  texture.cpp  vao.cpp
